--- a/css/index.css
+++ b/css/index.css
@@ -331,8 +331,11 @@ footer {
 }
 
 @media screen and (max-width: 780px) {
+  .global-swiper-slide {
+    margin: 0;
+  }
   .games {
-    margin: 20px;
+    margin: 30px;
   }
   .img-slider {
     width: 300px;
