--- a/css/index.scss
+++ b/css/index.scss
@@ -149,7 +149,7 @@ body{
     }
   
     .img-slider .slide .info h2{
-      font-size: 35px;
+      font-size: 30px;
     }
   
     .img-slider .slide .info p{
@@ -341,6 +341,8 @@ footer{
 
 @media screen and (max-width: 780px){
   .global-swiper-slide{
+    display: grid;
+    justify-content: center;
     margin: 0;
   }
   
