--- a/css/index.css
+++ b/css/index.css
@@ -218,6 +218,59 @@ body {
   }
 }
 
+.game {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: end;
+      align-content: flex-end;
+}
+
+.games h3 {
+  font-weight: bolder;
+  font-size: 2em;
+  text-align: center;
+}
+
+.games p {
+  margin: 10px;
+}
+
+.game {
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 350px;
+  margin-right: 30px;
+  padding: 20px;
+}
+
+.game a {
+  text-decoration: none;
+  color: white;
+  text-align: center;
+  border: 1px solid white;
+  border-radius: 20px;
+  margin: 0 auto;
+  padding: 8px 50px;
+  margin-top: 10px;
+}
+
+.game a:hover {
+  background-color: white;
+  color: black;
+  font-weight: bolder;
+}
+
+.game:hover {
+  -webkit-box-shadow: white 0.2em 0.2em 0.8em;
+          box-shadow: white 0.2em 0.2em 0.8em;
+  -webkit-transform: translateY(-15px);
+          transform: translateY(-15px);
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
 .global-swiper-slide {
   margin: 50px 0 50px 0;
 }
@@ -253,6 +306,12 @@ body {
 
 #slide1 {
   background-image: url(../img/Control.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#slide2 {
+  background-image: url(../img/Control2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
