--- a/css/dully.css
+++ b/css/dully.css
@@ -13,7 +13,7 @@ body {
 .portada {
   width: 100%;
   height: 500px;
-  background-image: url(../img/Dully/Portada\ 1.png);
+  background-image: url(../img/Dully/Portada1.png);
   background-size: cover;
   display: grid;
   display: grid;
