--- a/css/index.css
+++ b/css/index.css
@@ -64,158 +64,66 @@ body {
           justify-content: center;
 }
 
-.img-slider {
-  position: relative;
-  width: 800px;
+#sw1 {
+  width: 90%;
   height: 500px;
-  margin: 10px;
-  padding: 30px;
-  background: #1D212B;
+  color: white;
 }
 
-.img-slider .slide {
-  z-index: 1;
-  position: absolute;
-  width: 100%;
-  -webkit-clip-path: circle(0% at 0 50%);
-          clip-path: circle(0% at 0 50%);
-}
-
-.img-slider .slide.active {
-  -webkit-clip-path: circle(150% at 0 50%);
-          clip-path: circle(150% at 0 50%);
-  -webkit-transition: 2s;
-  transition: 2s;
-  -webkit-transition-property: -webkit-clip-path;
-  transition-property: -webkit-clip-path;
-  transition-property: clip-path;
-  transition-property: clip-path, -webkit-clip-path;
-}
-
-.img-slider .slide img {
-  z-index: 1;
-  width: 100%;
-  border-radius: 5px;
-}
-
-.img-slider .slide .info {
-  position: absolute;
-  top: 0;
-  padding: 15px 30px;
-}
-
-.img-slider .slide .info h2 {
-  color: #fff;
-  font-size: 30px;
-  text-transform: uppercase;
-  font-weight: 800;
-  letter-spacing: 2px;
-}
-
-.img-slider .slide .info p {
-  color: #fff;
-  background: rgba(0, 0, 0, 0.1);
-  font-size: 16px;
-  width: 60%;
-  padding: 10px;
-  border-radius: 4px;
-}
-
-.img-slider .navigation {
-  z-index: 2;
-  position: absolute;
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
-  bottom: 30px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  display: -webkit-flex;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
-.img-slider .navigation .btn {
-  background: rgba(255, 255, 255, 0.5);
-  width: 12px;
-  height: 12px;
-  margin: 10px;
-  border-radius: 50%;
-  cursor: pointer;
+.swiper-slide > div {
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 20px;
+  padding: 20px;
 }
 
-.img-slider .navigation .btn.active {
-  background: #2696E9;
-  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
-          box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+.swiper-slide > div h2 {
+  text-align: left;
 }
 
-@media (max-width: 820px) {
-  .img-slider {
-    width: 600px;
-    height: 375px;
-  }
-  .img-slider .slide .info {
-    padding: 10px 25px;
-  }
-  .img-slider .slide .info h2 {
-    font-size: 30px;
-  }
-  .img-slider .slide .info p {
-    width: 70%;
-    font-size: 15px;
-  }
-  .img-slider .navigation {
-    bottom: 25px;
-  }
-  .img-slider .navigation .btn {
-    width: 10px;
-    height: 10px;
-    margin: 8px;
-  }
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
-@media (max-width: 620px) {
-  .img-slider {
-    width: 400px;
-    height: 250px;
-  }
-  .img-slider .slide .info {
-    padding: 10px 20px;
-  }
-  .img-slider .slide .info h2 {
-    font-size: 30px;
-  }
-  .img-slider .slide .info p {
-    width: 80%;
-    font-size: 13px;
-  }
-  .img-slider .navigation {
-    bottom: 15px;
-  }
-  .img-slider .navigation .btn {
-    width: 8px;
-    height: 8px;
-    margin: 6px;
-  }
+#slide1-1 {
+  background-image: url(../img/Dully/Portada1.png);
+  background-size: contain;
 }
 
-@media (max-width: 420px) {
-  .img-slider {
-    width: 320px;
-    height: 200px;
-  }
-  .img-slider .slide .info {
-    padding: 5px 10px;
-  }
-  .img-slider .slide .info h2 {
-    font-size: 25px;
-  }
-  .img-slider .slide .info p {
-    width: 90%;
-    font-size: 11px;
-  }
-  .img-slider .navigation {
-    bottom: 10px;
-  }
+#slide1-2 {
+  background-image: url(../img/Dully/Personajes-negativo.png);
+  background-size: contain;
+}
+
+#slide1-3 {
+  background-image: url(../img/Dully/Escenario1.png);
+  background: cover;
+  background-repeat: no-repeat;
 }
 
 .game {
@@ -271,46 +179,24 @@ body {
   transition: 1s;
 }
 
+#sw2 {
+  width: 100%;
+  height: 300px;
+  color: white;
+}
+
 .global-swiper-slide {
   margin: 50px 0 50px 0;
 }
 
-.swiper {
-  width: 100%;
-  height: 400px;
-  color: white;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-#slide1 {
+#slide2-1 {
   background-image: url(../img/Control.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: 25% 50%;
 }
 
-#slide2 {
+#slide2-2 {
   background-image: url(../img/Control2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
