--- a/css/index.scss
+++ b/css/index.scss
@@ -51,7 +51,7 @@ body{
   margin-bottom: 50px;
 }
 
-//Slider
+//Slider 1
 
 .sect1{
   display: grid;
@@ -64,164 +64,71 @@ body{
     justify-content: center;
 }
 
-.img-slider{
-    position: relative;
-    width: 800px;
-    height: 500px;
-    margin: 10px;
-    padding: 30px;
-    background: #1D212B;
-  }
-  
-  .img-slider .slide{
-    z-index: 1;
-    position: absolute;
-    width: 100%;
-    clip-path: circle(0% at 0 50%);
-  }
-  
-  .img-slider .slide.active{
-    clip-path: circle(150% at 0 50%);
-    transition: 2s;
-    transition-property: clip-path;
-  }
-  
-  .img-slider .slide img{
-    z-index: 1;
-    width: 100%;
-    border-radius: 5px;
-  }
-  
-  .img-slider .slide .info{
-    position: absolute;
-    top: 0;
-    padding: 15px 30px;
-  }
-  
-  .img-slider .slide .info h2{
-    color: #fff;
-    font-size: 30px;
-    text-transform: uppercase;
-    font-weight: 800;
-    letter-spacing: 2px;
-  }
-  
-  .img-slider .slide .info p{
-    color: #fff;
-    background: rgba(0, 0, 0, 0.1);
-    font-size: 16px;
-    width: 60%;
-    padding: 10px;
-    border-radius: 4px;
-  }
-  
-  .img-slider .navigation{
-    z-index: 2;
-    position: absolute;
-    display: flex;
-    bottom: 30px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  
-  .img-slider .navigation .btn{
-    background: rgba(255, 255, 255, 0.5);
-    width: 12px;
-    height: 12px;
-    margin: 10px;
-    border-radius: 50%;
-    cursor: pointer;
-  }
-  
-  .img-slider .navigation .btn.active{
-    background: #2696E9;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
-  }
-  
-  @media (max-width: 820px){
-    .img-slider{
-      width: 600px;
-      height: 375px;
-    }
-  
-    .img-slider .slide .info{
-      padding: 10px 25px;
-    }
-  
-    .img-slider .slide .info h2{
-      font-size: 30px;
-    }
-  
-    .img-slider .slide .info p{
-      width: 70%;
-      font-size: 15px;
-    }
-  
-    .img-slider .navigation{
-      bottom: 25px;
-    }
-  
-    .img-slider .navigation .btn{
-      width: 10px;
-      height: 10px;
-      margin: 8px;
-    }
-  }
-  
-  @media (max-width: 620px){
-    .img-slider{
-      width: 400px;
-      height: 250px;
-    }
-  
-    .img-slider .slide .info{
-      padding: 10px 20px;
-    }
-  
-    .img-slider .slide .info h2{
-      font-size: 30px;
-    }
-  
-    .img-slider .slide .info p{
-      width: 80%;
-      font-size: 13px;
-    }
-  
-    .img-slider .navigation{
-      bottom: 15px;
-    }
-  
-    .img-slider .navigation .btn{
-      width: 8px;
-      height: 8px;
-      margin: 6px;
-    }
-  }
-  
-  @media (max-width: 420px){
-    .img-slider{
-      width: 320px;
-      height: 200px;
-    }
-  
-    .img-slider .slide .info{
-      padding: 5px 10px;
-    }
-  
-    .img-slider .slide .info h2{
-      font-size: 25px;
-    }
-  
-    .img-slider .slide .info p{
-      width: 90%;
-      font-size: 11px;
-    }
-  
-    .img-slider .navigation{
-      bottom: 10px;
-    }
-  }
+#sw1 {
+  width: 90%;
+  height: 500px;
+  color: white;
+}
 
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: grid;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+
+  align-content: flex-start;
+  justify-content: flex-start;
+}
+
+.swiper-slide > div{
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 20px;
+  padding: 20px;
+}
+
+.swiper-slide > div h2{
+  text-align: left;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@mixin fondo {
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#slide1-1{
+  background-image: url(../img/Dully/Portada1.png);
+  background-size: contain;
+}
+
+#slide1-2{
+  background-image: url(../img/Dully/Personajes-negativo.png);
+  background-size: contain;
+}
+
+#slide1-3{
+  background-image: url(../img/Dully/Escenario1.png);
+  background: cover;
+  background-repeat: no-repeat;
+}
 //Reliquias
 
 .game{
@@ -272,53 +179,23 @@ body{
 
 //Slider2
 
+#sw2 {
+  width: 100%;
+  height: 300px;
+  color: white;
+}
+
 .global-swiper-slide{
   margin: 50px 0 50px 0;
 }
 
-.swiper {
-  width: 100%;
-  height: 400px;
-  color: white;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-@mixin fondo {
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-#slide1{
+#slide2-1{
   background-image: url(../img/Control.jpg);
   @include fondo;
+  background-position: 25% 50%;
 }
 
-#slide2{
+#slide2-2{
   background-image: url(../img/Control2.jpg);
   @include fondo;
 }
