--- a/css/index.scss
+++ b/css/index.scss
@@ -258,6 +258,10 @@ footer{
   .img-slider{
     width: 600px;
   }
+
+  #sw1{
+    height: 300px;
+  }
 }
 
 @media screen and (max-width: 950px){
@@ -266,7 +270,7 @@ footer{
   }
 
   .creadores img{
-    width: 150px;
+    width: 130px;
   }
 }
 
@@ -308,5 +312,8 @@ footer{
   }
   .footer2{
     justify-content: center;
+  }
+  .creadores img{
+    width: 100px;
   }
 }
