--- a/css/index.css
+++ b/css/index.css
@@ -250,6 +250,10 @@ footer {
   padding: 30px;
 }
 
+.footer1 img {
+  width: 200px;
+}
+
 .footer2 {
   display: -webkit-box;
   display: -ms-flexbox;
