--- a/css/index.css
+++ b/css/index.css
@@ -134,6 +134,19 @@ body {
           justify-content: center;
   -ms-flex-line-pack: end;
       align-content: flex-end;
+  background-image: url(../img/Cartel-Final.jpg);
+  height: 350px;
+  margin-right: 30px;
+  padding: 20px;
+}
+
+.content-game {
+  background-color: rgba(0, 0, 0, 0.7);
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .games h3 {
@@ -144,13 +157,6 @@ body {
 
 .games p {
   margin: 10px;
-}
-
-.game {
-  background-color: rgba(0, 0, 0, 0.5);
-  height: 350px;
-  margin-right: 30px;
-  padding: 20px;
 }
 
 .game a {
