--- a/css/index.scss
+++ b/css/index.scss
@@ -135,6 +135,16 @@ body{
   display: grid;
   justify-content: center;
   align-content:flex-end;
+  background-image: url(../img/Cartel-Final.jpg);
+  height: 350px;
+  margin-right: 30px;
+  padding: 20px;
+}
+
+.content-game{
+  background-color: rgba(0, 0, 0, 0.7);
+  display: grid;
+  justify-content: center;
 }
 
 .games h3{
@@ -145,13 +155,6 @@ body{
 
 .games p{
   margin: 10px;
-}
-
-.game{
-  background-color: rgba(0, 0, 0, 0.5);
-  height: 350px;
-  margin-right: 30px;
-  padding: 20px;
 }
 
 .game a{
